--- a/domain-adaptation.bib
+++ b/domain-adaptation.bib
@@ -13,6 +13,15 @@
     url = {https://doi.org/10.1093/jamiaopen/ooaa010},
     eprint = {https://academic.oup.com/jamiaopen/article-pdf/3/2/146/33532957/ooaa010.pdf},
 }
-
-
+@inproceedings{daume-iii-2007-frustratingly,
+    title = "Frustratingly Easy Domain Adaptation",
+    author = "Daum{\'e} III, Hal",
+    booktitle = "Proceedings of the 45th Annual Meeting of the Association of Computational Linguistics",
+    month = jun,
+    year = "2007",
+    address = "Prague, Czech Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/P07-1033",
+    pages = "256--263",
+}
 
