Adds explanation of self-training

--- a/domain-adaptation.bib
+++ b/domain-adaptation.bib
@@ -24,4 +24,28 @@
     url = "https://www.aclweb.org/anthology/P07-1033",
     pages = "256--263",
 }
-
+@inproceedings{yarowsky-1995-unsupervised,
+    title = "Unsupervised Word Sense Disambiguation Rivaling Supervised Methods",
+    author = "Yarowsky, David",
+    booktitle = "33rd Annual Meeting of the Association for Computational Linguistics",
+    month = jun,
+    year = "1995",
+    address = "Cambridge, Massachusetts, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/P95-1026",
+    doi = "10.3115/981658.981684",
+    pages = "189--196",
+}
+@inproceedings{ruder-plank-2018-strong,
+    title = "Strong Baselines for Neural Semi-Supervised Learning under Domain Shift",
+    author = "Ruder, Sebastian  and
+      Plank, Barbara",
+    booktitle = "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = jul,
+    year = "2018",
+    address = "Melbourne, Australia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/P18-1096",
+    doi = "10.18653/v1/P18-1096",
+    pages = "1044--1054",
+}
