Adds slide on fine-tuning

--- a/domain-adaptation.bib
+++ b/domain-adaptation.bib
@@ -49,3 +49,39 @@
     doi = "10.18653/v1/P18-1096",
     pages = "1044--1054",
 }
+@inproceedings{yosinski:NIPS:2014,
+ author = {Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. Lawrence and K. Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {How transferable are features in deep neural networks?},
+ url = {https://proceedings.neurips.cc/paper/2014/file/375c71349b295fbe2dcdca9206f20a06-Paper.pdf},
+ volume = {27},
+ year = {2014}
+}
+@inproceedings{lee-etal-2018-transfer,
+    title = "Transfer Learning for Named-Entity Recognition with Neural Networks",
+    author = "Lee, Ji Young  and
+      Dernoncourt, Franck  and
+      Szolovits, Peter",
+    booktitle = "Proceedings of the Eleventh International Conference on Language Resources and Evaluation ({LREC} 2018)",
+    month = may,
+    year = "2018",
+    address = "Miyazaki, Japan",
+    publisher = "European Language Resources Association (ELRA)",
+    url = "https://www.aclweb.org/anthology/L18-1708",
+}
+@incollection{mccloskey:PLM:1989,
+title = {Catastrophic Interference in Connectionist Networks: The Sequential Learning Problem},
+editor = {Gordon H. Bower},
+series = {Psychology of Learning and Motivation},
+publisher = {Academic Press},
+volume = {24},
+pages = {109-165},
+year = {1989},
+issn = {0079-7421},
+doi = {https://doi.org/10.1016/S0079-7421(08)60536-8},
+url = {https://www.sciencedirect.com/science/article/pii/S0079742108605368},
+author = {Michael McCloskey and Neal J. Cohen},
+}
