Shrinks references font

--- a/domain-adaptation.tex
+++ b/domain-adaptation.tex
@@ -886,10 +886,10 @@ Findings:
 
 \appendix
 
-\begin{frame}[allowframebreaks]
-        \frametitle{References}
-        \bibliographystyle{apalike}
-        \bibliography{domain-adaptation.bib}
+\begin{frame}[allowframebreaks]{References}
+\scriptsize
+\bibliographystyle{apalike}
+\bibliography{domain-adaptation.bib}
 \end{frame}
 
 
